WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121359
REGRESSION(
r155228
): Call to DragData::asFragment() nullifies PassRefPtr<Range> in documentFragmentFromDragData
https://bugs.webkit.org/show_bug.cgi?id=121359
Summary
REGRESSION(r155228): Call to DragData::asFragment() nullifies PassRefPtr<Rang...
Zan Dobersek
Reported
2013-09-14 10:00:20 PDT
REGRESSION(
r155228
): Call to DragData::asFragment() nullifies PassRefPtr<Range> in documentFragmentFromDragData
Attachments
Patch
(1.91 KB, patch)
2013-09-14 10:02 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-09-14 10:02:50 PDT
Created
attachment 211652
[details]
Patch
Zan Dobersek
Comment 2
2013-09-14 10:06:18 PDT
The regressions after
r155228
seem to be specific to the GTK port that doesn't necessarily return a valid DocumentFragment in DragData::asFragment, but can't produce the expected results anymore after the PassRefPtr<Range> in documentFragmentAsText() is left null.
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r155768%20(40745)/results.html
Darin Adler
Comment 3
2013-09-14 14:01:58 PDT
Comment on
attachment 211652
[details]
Patch Oops!
Zan Dobersek
Comment 4
2013-09-14 14:10:42 PDT
Comment on
attachment 211652
[details]
Patch Clearing flags on attachment: 211652 Committed
r155785
: <
http://trac.webkit.org/changeset/155785
>
Zan Dobersek
Comment 5
2013-09-14 14:10:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug