REGRESSION(r155228): Call to DragData::asFragment() nullifies PassRefPtr<Range> in documentFragmentFromDragData https://bugs.webkit.org/show_bug.cgi?id=121359

Reviewed by Darin Adler.

* page/DragController.cpp:
(WebCore::documentFragmentFromDragData): Pass the naked pointer as the PassRefPtr<Range> argument to the DragData::asFragment()
call. The naked pointer will get wrapped and protected by a new PassRefPtr. Passing the original PassRefPtr will also create
a new PassRefPtr, but will leak the reference of the original one, leaving its pointer nullified.


Canonical link: https://commits.webkit.org/139342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155785 268f45cc-cd09-0410-ab3c-d52691b4dbfc